css: fix vertical alignment in repo and PR summaries etc.
In several table-like layouts (not actual HTML tables) with separate
"label" and "value" columns, this 10px margin-top (which only applies
to the "value") caused the "cells" to be out of alignment:

- The repository summary (clone URL, description, etc.)
- The pull request "summary" (description, origin, target, etc.)
- Settings pages of all sorts

--- a/kallithea/public/css/style.css
+++ b/kallithea/public/css/style.css
@@ -844,7 +844,7 @@ div.panel div.panel-heading {
 
 #content div.panel div.form div.form-horizontal div.form-group > div.summary,
 #content div.panel div.form div.form-horizontal div.form-group > div.summary-short {
-    margin: 10px 20px 10px 110px;
+    margin: 0 20px 10px 110px;
 }
 #content div.panel div.form div.form-horizontal div.form-group > div.summary-short input {
     margin: 0;
@@ -3190,7 +3190,7 @@ nav.navbar #quick li .dropdown-menu,
 }
 
 #content div.panel div.form div.form-horizontal div.form-group > div {
-    margin: 10px 20px 10px 200px;
+    margin: 0 20px 10px 200px;
     padding: 0;
 }
 
